fixing layout issues for responsiveness

--- a/stylesheets/xmlEditor.css
+++ b/stylesheets/xmlEditor.css
@@ -2,21 +2,40 @@ body{
     margin-top: 0px;
 }
 
+
+@media screen and (min-width: 0px) and (max-width: 479px){
+    #configColumn {border-left:none;}
+    #configColumn {height:auto;}
+    #LeftNav {height:auto;}
+    #XmlPane{height:auto;}
+
+}
+
+@media screen and (min-width: 480px){
+       #configColumn {border-left: 1px solid #eaeaea;}
+       #configColumn {height:100%;}
+       #LeftNav {height:100%;}
+       #XmlPane{height:100%;}
+}
+
+
 #CommandBar{
     min-height:50px;
-    padding:0px 0px 0px 10px; 
+    padding:0px 0px 0px 10px;
+    /* margin-right: -16px; */
 }
 
 .xmlCommandBar{
     min-height:40px;
     background:#eff6fc;
-    padding:10px 0px 10px 0px;
+    /* padding:10px 0px 10px 0px; */
 }
 
 .xmlCommandBar-item{
     margin: 0px 0px 0px 8px;
-    padding: 10px 15px 0px 15px;
+    padding: 10px 0px 0px 10px;
     min-height: 40px;
+    font-size: 11px;
 }
 .xmlCommandBar-item  > i {
     padding: 0px 2px 0px 0px;
@@ -28,6 +47,7 @@ body{
     padding:10px;
     text-align: center;
     cursor:pointer;
+    /* margin-right: -16px; */
 }
 
 .CommandBarTitle{
@@ -63,9 +83,26 @@ body{
     display: inherit;
 }
 #XmlPane{
- padding-right:0px
+ padding-left: 0px;
 }
 
 #siteContent{
     margin-right:-8px;
+}
+
+.ms-Callout{
+    background:white;
+    box-shadow: 0px 0px 5px 0px;
+}
+
+#xmlText > span > span {
+    font-weight:400;
+}
+
+.xmlCommandBar > div > div {
+    cursor: pointer;
+}
+
+#xmlSec, #xmlSection {
+    height:auto !important;
 }
